# desmos2usd

./: .gitignore  README.md  index.html  pyproject.toml
artifacts/acceptance/: compare-sheet.md  ghnr7txz47.ppm  ghnr7txz47.report.json  k0fbxxwkqf.ppm  k0fbxxwkqf.report.json  k0fbxxwkqf.usda  summary.json  vyp9ogyimt.ppm  vyp9ogyimt.report.json  yuqwjsfvsc.ppm  yuqwjsfvsc.report.json  zaqxhna15w.ppm  zaqxhna15w.report.json
artifacts/fixture_usdz/: [4B] 3D Diagram - S2-01 Group A.report.json  [4B] 3D Diagram - S2-01 Group B.report.json  [4B] 3D Diagram - S2-01 Group B.usda  [4B] 3D Diagram - S2-01 Group B.usdz  [4B] 3D Diagram - S2-01 Group C.report.json  [4B] 3D Diagram - S2-01 Group C.usda  [4B] 3D Diagram - S2-01 Group C.usdz  [4B] 3D Diagram - S2-01 Group D.report.json  [4B] 3D Diagram - S2-01 Group D.usda  [4B] 3D Diagram - S2-01 Group D.usdz  [4B] 3D Diagram - S2-01 Group E.report.json  [4B] 3D Diagram - S2-01 Group E.usda  [4B] 3D Diagram - S2-01 Group E.usdz  [4B] 3D Diagram - S2-01 Group F.report.json  [4B] 3D Diagram - S2-01 Group F.usda  [4B] 3D Diagram - S2-01 Group F.usdz  (+187 more)
fixtures/: manifest.json
implementation/: STATE.md  handoff.md
tests/: test_acceptance_samples.py  test_cli.py  test_csv_fixture_report.py  test_fixture_usdz_suite.py  test_parser.py  test_prim_diagnostics.py  test_sample_suite_summary.py  test_student_fixture_regressions.py  test_tessellate.py  test_usd_package.py  test_usd_writer.py  test_viewer_camera.py  test_visual_preview.py  test_window_border_diagnostics.py
viewer/: README.md  app.js  camera.js  index.html  styles.css
(+655 files in other folders)
